feat(phase-4): complete infrastructure setup - Docker, CI/CD, security
STEP 4.0 - GitHub Secrets and Prisma seed:
✅ Multi-stage Dockerfile with Next.js standalone build
✅ docker-compose.yml with PostgreSQL, Redis, and web services
✅ GitHub Actions workflows (ci.yml, preview.yml, deploy.yml)
✅ Lighthouse CI with performance budgets (≥90 scores)
✅ Dependabot configuration for automated dependency updates
✅ Enhanced security audit with vulnerability reporting
✅ Prisma seed script with demo data (admin + store users)
✅ Health check API endpoint for Docker monitoring
✅ Database scripts (migrate, seed, reset, studio)

Infrastructure ready for:
- Local development with Docker stack
- Automated CI/CD pipelines
- Vercel staging deployments
- Render production deployments
- Performance and security monitoring

Next: STEP 4.1 (Storybook), 4.2 (Observability), 4.3 (E2E Tests)

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,15 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:reset": "prisma migrate reset --force",
+    "db:studio": "prisma studio"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@admin-griffe/ui": "workspace:*",
@@ -48,6 +56,7 @@
     "eslint-config-next": "15.4.5",
     "jsdom": "^26.1.0",
     "tailwindcss": "^4",
+    "tsx": "^4.7.0",
     "typescript": "^5",
     "vitest": "^3.2.4"
   }
